Bug 1695318 - Pass the perspective association from CSS to WR r=gfx-reviewers,bradwerth

Depends on D136163

I have a feeling this isn't exactly the right way to pass this info, since the old WR code must have known about the perspective node without using my new flag.

Differential Revision: https://phabricator.services.mozilla.com/D136180