gfx/wr/webrender_api/src/display_item.rs
@@ -774,6 +774,10 @@ pub enum ReferenceFrameKind {
         /// Marks that the transform should be snapped. Used for transforms which animate in
         /// response to scrolling, eg for zooming or dynamic toolbar fixed-positioning.
         should_snap: bool,
+        /// Marks the transform being a part of the CSS stacking context that also has
+        /// a perspective. In this case, backface visibility takes this perspective into
+        /// account.
+        paired_with_perspective: bool,
     },
     /// A perspective transform, that optionally scrolls relative to a specific scroll node
     Perspective {
@@ -1772,6 +1776,7 @@ impl_default_for_enums! {
     ReferenceFrameKind => Transform {
         is_2d_scale_translation: false,
         should_snap: false,
+        paired_with_perspective: false,
     },
     Rotation => Degree0,
     TransformStyle => Flat,
